removed fontawesome dependency; fixed some accordion styles; more spacing with headings

--- a/src/styles/sass/_cu-accordion.scss
+++ b/src/styles/sass/_cu-accordion.scss
@@ -21,22 +21,37 @@
 	}
 	.carret {
 		float: left;
-		vertical-align: middle;
 		margin-left: -1.6rem;
-		padding-top: 0.4rem;
-		padding-right: 0.4rem;
+    margin-top: 0.5rem;
+    height: 1.5rem;
+		padding: 0.25rem;
+    position: relative;
 		-moz-transition: all .2s ease;
 		-o-transition: all .2s ease;
 		-webkit-transition: all .2s ease;
 		transition: all .2s ease;
+    vertical-align: middle;
+    width: 1.5rem;
+    &::before {
+      background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2264px%22%20height%3D%2264px%22%20viewBox%3D%220%200%2064%2064%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cpolygon%20fill%3D%22%23000000%22%20points%3D%2232%2054%200%2022%207%2015%2032%2040%2057%2015%2064%2022%22%3E%3C%2Fpolygon%3E%3C%2Fsvg%3E');
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      content: "";
+      display: block;
+      height: 1rem;
+      vertical-align: baseline;
+      width: 1rem;
+    }
 	}
 	.accordion-index {
 		float: left;
 		vertical-align: middle;
 		margin-left: -1.6rem;
 		padding-right: 0.4rem;
+    position: relative;
 	}
-	.accordion-btn.collapsed .fas {
+	.accordion-btn.collapsed .carret {
 		-moz-transform: rotate(-90deg);
 		-ms-transform: rotate(-90deg);
 		-webkit-transform: rotate(-90deg);
