--- a/src/styles/sass/_global.scss
+++ b/src/styles/sass/_global.scss
@@ -2,6 +2,18 @@ html, body {
   font-size: 16px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 1rem !important;
+}
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h1,
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h2,
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h3,
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h4,
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h5,
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) + h6 {
+  margin-top: 2rem;
+}
+
 figure.highlight pre {
   font-size: 14px;
   line-height: 20px;
@@ -94,11 +106,6 @@ main.ds-main {
   color: #FFF;
 }
 
-#cu-footer .a11y .fa {
-  font-size: 1.5em;
-  font-weight: 700 !important;
-}
-
 footer .crown-container {
   float: left;
   width: 27px;
@@ -132,7 +139,24 @@ footer .crown-container {
 #footer-cu-homepage:hover .st0 {
   fill: #75aadb !important;
 }
-
+#cu-footer-links .a11y a .wheelchair-icon {
+  display: inline-block;
+  vertical-align: middle;
+}
+#cu-footer-links .a11y a .wheelchair-icon::before {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2221px%22%20height%3D%2221px%22%20viewBox%3D%220%200%2021%2021%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cpath%20d%3D%22M20.5119141%2C16.3972266%20L20.9487305%2C17.2788164%20C21.0691934%2C17.521957%2020.9701406%2C17.8167773%2020.7272871%2C17.9378145%20L18.1319004%2C19.257041%20C17.6342168%2C19.503709%2017.0252578%2C19.2898945%2016.7959805%2C18.7762148%20L14.1270527%2C12.796875%20L7.54699805%2C12.796875%20C7.05358008%2C12.796875%206.63632812%2C12.4315078%206.5711543%2C11.9423965%20C5.15730469%2C1.33879102%205.26078711%2C2.15098242%205.25%2C1.96875%20C5.25%2C0.85509375%206.17465625%2C-0.0425742187%207.29811523%2C0.00155859375%20C8.31476953%2C0.0415078125%209.14295703%2C0.867275391%209.18569531%2C1.88384766%20C9.22917188%2C2.91776953%208.47468945%2C3.7839375%207.48744336%2C3.91879688%20L7.88369531%2C6.890625%20L13.9453125%2C6.890625%20C14.217123%2C6.890625%2014.4375%2C7.11100195%2014.4375%2C7.3828125%20L14.4375%2C8.3671875%20C14.4375%2C8.63899805%2014.217123%2C8.859375%2013.9453125%2C8.859375%20L8.14623633%2C8.859375%20L8.40873633%2C10.828125%20L14.765625%2C10.828125%20C15.154077%2C10.828115%2015.5062065%2C11.0565589%2015.6645234%2C11.4112852%20L18.1760332%2C17.0380137%20L19.8508652%2C16.1754961%20C20.0946211%2C16.0536387%2020.390959%2C16.1530605%2020.5119141%2C16.3972266%20L20.5119141%2C16.3972266%20Z%20M12.8498262%2C14.765625%20L12.3757676%2C14.765625%20C11.9136855%2C17.1915352%209.77718164%2C19.03125%207.21875%2C19.03125%20C4.3239082%2C19.03125%201.96875%2C16.6760918%201.96875%2C13.78125%20C1.96875%2C11.9862012%202.87449805%2C10.3989785%204.25274609%2C9.45180469%20L3.97039453%2C7.33593164%20C1.61716406%2C8.52673828%200%2C10.9685215%200%2C13.78125%20C0%2C17.7616934%203.23830664%2C21%207.21875%2C21%20C10.1146582%2C21%2012.6172676%2C19.2856699%2013.7663203%2C16.8188262%20L12.8498262%2C14.765625%20Z%22%20fill%3D%22%23FFFFFF%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  display: inline-block;
+  height: 1.5em;
+  vertical-align: baseline;
+  width: 1.5em;
+}
+#cu-footer-links .a11y a:hover .wheelchair-icon::before {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2221px%22%20height%3D%2221px%22%20viewBox%3D%220%200%2021%2021%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cpath%20d%3D%22M20.5119141%2C16.3972266%20L20.9487305%2C17.2788164%20C21.0691934%2C17.521957%2020.9701406%2C17.8167773%2020.7272871%2C17.9378145%20L18.1319004%2C19.257041%20C17.6342168%2C19.503709%2017.0252578%2C19.2898945%2016.7959805%2C18.7762148%20L14.1270527%2C12.796875%20L7.54699805%2C12.796875%20C7.05358008%2C12.796875%206.63632812%2C12.4315078%206.5711543%2C11.9423965%20C5.15730469%2C1.33879102%205.26078711%2C2.15098242%205.25%2C1.96875%20C5.25%2C0.85509375%206.17465625%2C-0.0425742187%207.29811523%2C0.00155859375%20C8.31476953%2C0.0415078125%209.14295703%2C0.867275391%209.18569531%2C1.88384766%20C9.22917188%2C2.91776953%208.47468945%2C3.7839375%207.48744336%2C3.91879688%20L7.88369531%2C6.890625%20L13.9453125%2C6.890625%20C14.217123%2C6.890625%2014.4375%2C7.11100195%2014.4375%2C7.3828125%20L14.4375%2C8.3671875%20C14.4375%2C8.63899805%2014.217123%2C8.859375%2013.9453125%2C8.859375%20L8.14623633%2C8.859375%20L8.40873633%2C10.828125%20L14.765625%2C10.828125%20C15.154077%2C10.828115%2015.5062065%2C11.0565589%2015.6645234%2C11.4112852%20L18.1760332%2C17.0380137%20L19.8508652%2C16.1754961%20C20.0946211%2C16.0536387%2020.390959%2C16.1530605%2020.5119141%2C16.3972266%20L20.5119141%2C16.3972266%20Z%20M12.8498262%2C14.765625%20L12.3757676%2C14.765625%20C11.9136855%2C17.1915352%209.77718164%2C19.03125%207.21875%2C19.03125%20C4.3239082%2C19.03125%201.96875%2C16.6760918%201.96875%2C13.78125%20C1.96875%2C11.9862012%202.87449805%2C10.3989785%204.25274609%2C9.45180469%20L3.97039453%2C7.33593164%20C1.61716406%2C8.52673828%200%2C10.9685215%200%2C13.78125%20C0%2C17.7616934%203.23830664%2C21%207.21875%2C21%20C10.1146582%2C21%2012.6172676%2C19.2856699%2013.7663203%2C16.8188262%20L12.8498262%2C14.765625%20Z%22%20fill%3D%22%2375aadb%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
 
 #brand-wrapper {
   padding-top: 10px;
